<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.mosi.tdpsync.ui.Toma_Pedido"
    tools:showIn="@layout/activity_toma__pedido">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/compania"
        android:textColor="@color/input_login"
        android:id="@+id/twv_compania_toma"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/cliente"
        android:textColor="@color/input_login"
        android:id="@+id/twv_cliente_toma"
        android:layout_below="@+id/twv_compania_toma"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/input_login"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/correlativos"
        android:id="@+id/twv_correlativo_toma"
        android:layout_below="@+id/twv_cliente_toma"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lwv_pedidos_principal"
        android:divider="@drawable/divider_listview"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/twv_correlativo_toma"
        android:layout_above="@+id/twv_total"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total"
        android:id="@+id/twv_total"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/input_login"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/totalq"
        android:id="@+id/textView2"
        android:layout_below="@+id/lwv_pedidos_principal"
        android:layout_toLeftOf="@+id/twv_total"
        android:layout_toStartOf="@+id/twv_total" />

</RelativeLayout>
