<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imag_producto"
        android:layout_width="wrap_content"
        android:contentDescription="@string/app_name"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="6dp"
        android:layout_marginStart="6dp"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/twv_descripcionproducto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imag_producto"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_toRightOf="@+id/imag_producto"
        android:layout_toEndOf="@id/imag_producto"
        android:text="@string/descripcion"

        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/twv_unidades"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint_cantidad"
        android:layout_alignBottom="@+id/imag_producto"
        android:layout_alignLeft="@+id/twv_descripcionproducto"
        android:layout_alignStart="@+id/twv_descripcionproducto" />
</RelativeLayout>