<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mosi.tdpsync.ui.Buscar_pedidos">

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_correlativo_buscar"
        android:background="@drawable/rounded_edge"
        android:hint="@string/hint_buscar"
        android:inputType="number"
        android:padding="10dp"
        android:textSize="@dimen/tamano_texto"
        android:imeOptions="actionSearch"
        android:textColor="@color/input_login"
        android:textColorHint="@color/input_register_hint"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/textView"
        android:layout_toEndOf="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lwv_recuperacion"
        android:layout_alignParentLeft="true"
        android:divider="@drawable/divider_listview"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/chkbx_sincronizado"
        android:layout_below="@+id/twv_cliente" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sincronizado"
        android:enabled="false"
        android:textColor="@android:color/black"
        android:button="@xml/custome_checkbox"
        android:id="@+id/chkbx_sincronizado"
        android:checked="false"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/twv_cliente"
        android:layout_alignStart="@+id/twv_cliente"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/anulado"
        android:id="@+id/chkbx_anulado"
        android:checked="false"
        android:shadowColor="@color/colorPrimary"
        android:enabled="false"
        android:button="@xml/custome_checkboxanulado"
        android:textColor="@android:color/black"
        android:layout_marginRight="60dp"
        android:layout_marginEnd="60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/txt_no_correlativo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/correlativo_final"
        android:textColor="@color/input_login"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:layout_below="@+id/edt_correlativo_buscar"
        android:layout_toRightOf="@+id/textView"
        android:layout_toEndOf="@+id/textView" />

    <TextView
        android:id="@+id/twv_cliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cliente"
        android:textColor="@color/input_login"
        android:layout_below="@+id/txt_no_correlativo"
        android:layout_alignLeft="@+id/txt_no_correlativo"
        android:layout_alignStart="@+id/txt_no_correlativo" />

</RelativeLayout>
