<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_insert"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mosi.tdpsync.ui.insert_pedidos">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:orientation="vertical">

        <AutoCompleteTextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/auto_edt_producto"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_edge"
            android:hint="@string/hint_producto"
            android:imeOptions="actionNext"
            android:nextFocusDown="@+id/edt_cantidad"
            android:completionThreshold="1"
            android:padding="10dp"
            android:inputType="textCapCharacters"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_register_hint"/>

        <AutoCompleteTextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edt_cantidad"
            android:layout_marginBottom="10dp"
            android:completionThreshold="1"
            android:background="@drawable/rounded_edge"
            android:hint="@string/hint_cantidad"
            android:imeOptions="actionNext"
            android:nextFocusDown="@+id/edt_correlativo_buscar"
            android:inputType="number"
            android:padding="10dp"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_register_hint"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edt_bonificaciones"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_edge"
            android:hint="@string/hint_bonificaciones"
            android:inputType="number"
            android:imeOptions="actionDone"
            android:padding="10dp"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_register_hint"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bnt_inserta"
            android:layout_marginTop="20dip"
            android:background="@drawable/redondear_boton_acciones"
            android:text="@string/bnt_insert"
            android:textColor="@color/white"/>

    </LinearLayout>


</RelativeLayout>
