<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mosi.tdpsync.ui.Compania_Cliente">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:orientation="vertical">

        <AutoCompleteTextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/auto_compania"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_edge"
            android:hint="@string/hint_compania"
            android:completionThreshold="1"
            android:imeOptions="actionNext"
            android:nextFocusDown="@+id/auto_cliente"
            android:padding="10dp"
            android:inputType="textCapCharacters"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_register_hint"/>

        <AutoCompleteTextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/auto_cliente"
            android:completionThreshold="1"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_edge"
            android:hint="@string/hint_cliente"
            android:imeOptions="actionDone"
            android:inputType="textCapCharacters"
            android:padding="10dp"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_register_hint"/>

        <!-- Login Button -->

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme"
            android:id="@+id/sp_correlativo"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bnt_continuar"
            android:layout_marginTop="20dip"
            android:background="@drawable/redondear_boton_acciones"
            android:text="@string/btn_Continuar"
            android:textColor="@color/white"/>

    </LinearLayout>


</RelativeLayout>
