<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@android:color/white"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mosi.tdpsync.ui.Menu_Principal">

    <Button
        android:layout_width="fill_parent"
        android:layout_height="-10dp"
        android:text="@string/pedidonuevo"
        android:onClick="pedido_movil"
        android:gravity="center"
        android:padding="5dp"
        android:textAppearance="?android:attr/textAppearanceButton"
        android:textSize="18dp"
        android:background="@color/white"
        android:id="@+id/bnt_pedido_nvo"
        android:drawableLeft="@mipmap/add_shopping_cart"
        android:textColor="@color/input_register_hint"
        android:layout_above="@+id/bnt_buscar_pedido"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="-8dp"
        android:text="@string/buscarpedido"
        android:id="@+id/bnt_buscar_pedido"
        android:onClick="buscar_pedido"
        android:gravity="center"
        android:padding="5dp"
        android:textColor="@color/input_register_hint"
        android:textSize="18dp"
        android:background="@color/white"
        android:drawableLeft="@mipmap/search"
        android:layout_marginTop="5dp"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="-8dp"
        android:onClick="sincronizar"
        android:text="@string/sincronizar"
        android:gravity="center"
        android:padding="5dp"
        android:textColor="@color/input_register_hint"
        android:textSize="18dp"
        android:background="@color/white"
        android:drawableLeft="@mipmap/synchronize"
        android:id="@+id/bnt_sincronizar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/bnt_buscar_pedido" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/img_salir"
        android:background="@android:color/white"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:src="@mipmap/close" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:background="@android:color/white"
        android:src="@mipmap/mosilogosplash"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp" />

</RelativeLayout>
